# WinsockLearn

./: CMakeLists.txt  README.md  RecvTest.cpp  SendTest.cpp  recv_test.cpp  send_test.cpp
include/: RecvSocket.h  SendSocket.h
src/: Buffer.cpp  Buffer.h  IOCP.cpp  IOCP.h  Socket.cpp  Socket.h  Timer.cpp  Timer.h  common.cpp  common.h  recv.cpp  recv.h  send.cpp  send.h
